--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="multiply">×</string>
     <string name="divide">÷</string>
     <string name="answer">Answer</string>
+    <string name="all_rights_are_reserved">Husnain Ali Rafique</string>
 
 </resources>
