--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="divide">÷</string>
     <string name="answer">Answer</string>
     <string name="all_rights_are_reserved">Husnain Ali Rafique</string>
+    <string name="dark">Dark</string>
 
 </resources>
